src/tests/parse_errors/001.ura
// parse_errors/001 — unterminated string literal
use "@/header"

main():
    output("hello)